--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="kosten_mail">kosten.mapx@gmail.com</string>
     <string name="kosten_info">Desarrollo de aplicaciones móviles</string>
 
-    <string name="app_name">infoComarca</string>
+    <string name="app_name">infoPatagones</string>
     <string name="app_version">V 0.20.0</string>
     <string name="app_lema">Toda la información de la Comarca Viedma - Patagones</string>
 
